--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "@types/node": "16.11.26",
     "@types/react": "18.0.3",
     "@types/react-dom": "18.0.0",
+    "axios": "0.26.1",
+    "chart.js": "3.7.1",
+    "chartjs-plugin-zoom": "1.2.1",
+    "notyf": "3.10.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "4.1.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "typescript": "4.6.3",
